# occular-deskew

./: .gitignore  README.md  pyproject.toml
occular_deskew/: __init__.py  deskew.py
occular_deskew/weights/: dinov2_skew_v0.4.0.pth
