[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "occular-deskew"
version = "0.3.0"
description = "Document deskew: fine-angle regressor (±30°) + orientation classifier (0/90/180/270)"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["occular_deskew*"]

[tool.setuptools.package-data]
occular_deskew = ["weights/*.pth"]
